
6.27  2015-10-29
  - Updated HTML5 entities in Mojo::Util.

6.26  2015-10-28
  - Renamed built-in templates with more descriptive names.
  - Added warmup method to Mojolicious::Renderer and Mojolicious::Static.

6.25  2015-10-21
  - Deprecated Mojo::Message::Request::proxy with boolean and string arguments
    in favor of Mojo::Message::Request::via_proxy.
  - Replaced proxy method in Mojo::Message::Request with an attribute.
  - Moved all bundled files into "resources" directories.
  - Added via_proxy attribute to Mojo::Message::Request.
  - Improved Mojo::DOM::CSS to support selectors with leading and trailing
    whitespace.
  - Improved rendering of built-in templates to show actual template names in
    log messages.
  - Fixed punycode bug in Mojo::URL.
  - Fixed "0" value bug in Mojo::JSON::Pointer.

6.24  2015-10-13
  - Improved session security by not storing secrets in the stash and making
    CSRF tokens much harder to guess.
  - Improved commands to show all options that can affect their behavior.
  - Fixed bug in Mojo::JSON::Pointer that prevented JSON Pointers with trailing
    slash from working correctly. (dolmen)
  - Fixed support for domains with trailing dot in Mojo::URL.

6.23  2015-10-06
  - Improved documentation browser CSS.
  - Fixed bug in Mojo::Transaction::WebSocket where an unsupported protocol
    could be selected automatically.
  - Fixed input record separator bug in Mojo::Util. (Zoffix, sri)
  - Fixed small redirect bug in Mojo::UserAgent::Transactor.

6.22  2015-09-26
  - Improved Mojo::JSON by reusing JSON::PP boolean constants.
  - Improved uniq method in Mojo::Collection to accept a callback. (CandyAngel)
  - Improved first and grep methods in Mojo::Collection to be able to call
    methods.
  - Improved support for empty attributes in Mojo::DOM::HTML.

6.21  2015-09-23
  - Added val method to Mojo::DOM.

6.20  2015-09-15
  - Deprecated Mojo::UserAgent::CookieJar::collecting in favor of
    Mojo::UserAgent::CookieJar::ignore.